# pykan

./: .gitignore  hellokan.ipynb  p300.ipynb  p300_test_01.ipynb  pyproject.toml
docs/Examples/: PDE_3D_.ipynb
p300/: __init__.py  p300_mat_extractor.py
tests/p300/: test_p300_mat_extractor.py
